# minecraft-server-discord-bot

./: .env.template  Dockerfile  README.md  discord_bot.py  docker-compose.yml  entrypoint.sh  log_config.json  log_config.py  main.py  minecraft.py  pyproject.toml
server-scripts/: shutdown.sh  startup.sh
